Verificando e validando o acesso pela API ao Banco de dados. #3.

--- a/api/analyze/pom.xml
+++ b/api/analyze/pom.xml
@@ -31,6 +31,13 @@
 		</dependency>
 
 		<dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -51,5 +58,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+            <id>dev</id>
+            <activation>
+                <!-- this profile is active by default -->
+                <activeByDefault>true</activeByDefault>
+            </activation>
+			<properties>
+                <activatedProperties>dev</activatedProperties>
+			</properties>
+        </profile>
+	</profiles>
 
 </project>
